[package]
name = "rusturn"
version = "0.0.3"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust implementation of TURN server and client"
homepage = "https://github.com/sile/rusturn"
repository = "https://github.com/sile/rusturn"
readme = "README.md"
keywords = ["TURN"]
categories = ["asynchronous", "network-programming"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/rusturn"}
codecov = {repository = "sile/rusturn"}

[dependencies]
bytecodec = "0.4"
factory = "0.1"
fibers = "0.1"
fibers_timeout_queue = "0.1"
fibers_transport = "0.1"
futures = "0.1"
rand = "0.6"
rustun = "0.3"
stun_codec = "0.1"
trackable = "0.2"

[dev-dependencies]
clap = "2"
fibers_global = "0.1.2"
structopt = "0.2"
