[package]
name = "rusturn"
version = "0.0.6"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust implementation of TURN server and client"
homepage = "https://github.com/sile/rusturn"
repository = "https://github.com/sile/rusturn"
readme = "README.md"
keywords = ["TURN"]
categories = ["asynchronous", "network-programming"]
license = "MIT"
edition = "2021"

[badges]
coveralls = {repository = "sile/rustun"}

[dependencies]
bytecodec = "0.4"
factory = "0.1"
fibers = "0.1"
fibers_timeout_queue = "0.1"
fibers_transport = "0.1"
futures = "0.1"
log = "0.4"
rand = "0.8"
rustun = "0.4"
stun_codec = "0.2"
trackable = "1"

[dev-dependencies]
clap = { version = "3", features = ["derive"] }
env_logger = "0.9"
fibers_global = "0.1.2"
